# RL25_Homework_2

./: README.md
aruco_ros/config/: aruco_params.yaml
ros2_iiwa/iiwa_bringup/launch/: iiwa.launch.py
ros2_iiwa/iiwa_description/: CMakeLists.txt
ros2_iiwa/iiwa_description/config/: iiwa_controllers.yaml
ros2_iiwa/iiwa_description/gazebo/models/arucotag/: model.sdf
ros2_iiwa/iiwa_description/gazebo/worlds/: aruco.world  first_world.sdf
ros2_iiwa/iiwa_description/launch/: aruco_gazebo.launch.py
ros2_iiwa/iiwa_description/urdf/: iiwa.urdf.xacro
ros2_kdl_package/: CMakeLists.txt  README.md  package.xml
ros2_kdl_package/action/: ExecuteTrajectory.action
ros2_kdl_package/config/: kdl_params.yaml
ros2_kdl_package/include/: kdl_control.h
ros2_kdl_package/launch/: ros2_kdl_node.launch.py
ros2_kdl_package/src/: kdl_control.cpp  ros2_kdl_node.cpp
